--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,13 @@
+
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>{{ page.title }}</title>
+  <link rel="stylesheet" href="/assets/css/styles.css">
+</head>
+<body>
 {% include navigation.html %}
-    {{ content }}
-  </body>
+{{ content }}
+</body>
 </html>
