--- a/_layouts/algorithm.html
+++ b/_layouts/algorithm.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% include navigation.html %}
-<h1>{{ page.name }}</h1>
-<h2>{{ page.type }}</h2>
+
+<h1> {{page.title}} </h1>
 
 {{ content }}
