--- a/_layouts/algorithm.html
+++ b/_layouts/algorithm.html
@@ -1,8 +1,12 @@
 ---
-layout: default
----
-{% include navigation.html %}
+layout: publication
 
-<h1> {{page.title}} </h1>
+---
+
+<section id="{{page.title}}" class="bg-light-gray">
+
+<div class="m-5 pb-5">
 
 {{ content }}
+</div>
+    </section>
