--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -2,19 +2,24 @@
     <aside class="clients">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-sm-6">
+                <div class="col-md-4 ">
                     <p>  <br> <br> </p>
                     <a href="#">
-                        <img src="img/logos/ubc.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/ubc.jpg" class="img-responsive " alt="">
                     </a>
                 </div>
 
-                <div class="col-md-4 col-sm-6">
+                <div class="col-md-4 >
                     <a href="#">
-                        <img src="img/logos/ece.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/ECE.jpg" class="img-responsive " alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 ">
+                    <a href="#">
+                        <img src="img/logos/Avertus.jpg" class="img-responsive " alt="">
                     </a>
                 </div>
 
             </div>
         </div>
-    </aside>
+    </aside clas>
