--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,10 +25,10 @@
                         <a class="page-scroll" href="/algorithm.html">Algorithms</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#publications">Publications</a>
+                        <a class="page-scroll" href="/datasets.html">Dataset</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#publications">Publications</a>
                     </li>
 
                     <li>
@@ -47,16 +47,16 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Brain2Speech</div>
-                <div class="lead">By the UBC HCT Lab</div>
-                <a href="#Brain2Speech" class="page-scroll btn btn-xl">Tell Me More</a>
-            </div>
-        </div>
-    </header>
-<!--
-        {% for page in site.pages %}
-          {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
-        {% endfor %}
- -->
+              <div class="intro-text">
+                 <div class="intro-lead-in">Welcome To Brain2Speech</div>
+                 <div class="lead">By the UBC HCT Lab</div>
+                 <a href="#Brain2Speech" class="page-scroll btn btn-xl">Tell Me More</a>
+             </div>
+         </div>
+     </header>
+ <!--
+         {% for page in site.pages %}
+           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
+         {% endfor %}
+  -->
 
