--- a/_includes/header_other.html
+++ b/_includes/header_other.html
@@ -25,10 +25,10 @@
                         <a class="page-scroll" href="/algorithm.html">Algorithms</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#publications">Publications</a>
+                        <a class="page-scroll" href="/datasets.html">Dataset</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#about">About</a>
+                        <a class="page-scroll" href="/#publications">Publications</a>
                     </li>
 
                     <li>
@@ -48,8 +48,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Brain2Speech</div>
-                <div class="lead">By the UBC HCT Lab</div>
+                <div class="intro-lead-in">{{page.title}}</div>
             </div>
         </div>
     </header>
