--- a/_includes/Brain2Speech.html
+++ b/_includes/Brain2Speech.html
@@ -1,30 +1,50 @@
 <!-- Services Section -->
-    <section id="Brain2Speech">
+    <section id="Brain2Speech" class="bg-light-gray">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-sm-1">
+                </div>
+                <div class="col-lg-10 text-center">
                     <h2 class="section-heading">Brain2Speech</h2>
-                    <p class="section-subheading text-muted">Communication is a basic human activity to exchange information with each other. In particular, speaking is the easiest and the most straightforward way to communicate.
-                        With the Brain2Speech project, the Human Communications Technologies Lab at UBC is currently investigating new methods to control an advanced 3D biomechanical articulatory speech synthesis using neural activation-based models.</p>
+                    <p class="section-subheading">
+                        Communication is a basic human activity to exchange information with each other. In particular,
+                        speaking is the easiest and the most straightforward way to communicate. With the Brain2Speech project, the team at the UBC Human Communication Technologies Lab
+                        aims to advance the state of the art of brain computer interfaces (BCI). THe main focus of this project is to by build and evaluate a new method to control an advanced 3D
+                        biomechanical articulatory speech synthesis using neural activation-based models. The end goal is to allow users to create
+                        speech and voice sounds through a speech synthesizer using advanced EEG signal processing.
+                    </p>
+
+                </div>
+                <div class="col-sm-1">
+
                 </div>
             </div>
             <p>  <br> <br> </p>
             <div class="row text-center">
-                <div class="col-md-6">
+                <div class="col-sm-1">
+
+                </div>
+                <div class="col-sm-5">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="Speech Synthesis">Speech Synthesis</h4>
-                    <p class="text-muted">#description</p>
+                    <p>Producing a biomechanically driven articulatory speech synthesizer
+                        that contains the anatomical structure and function of a particular user. The aim is to create an interface where the user can control a virtual vocal tract to produce speech sounds by thinking.
+                    </p>
                 </div>
-                <div class="col-md-6">
+
+                <div class="col-sm-5">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="Signal Processing">Signal Processing</h4>
-                    <p class="text-muted">#description</p>
+                    <p>Using machine learning algorithms to process EEG signals, the team focuses on identifying locations in the brain where the control of muscles of the vocal tract are expressed. </p>
+                </div>
+                <div class="col-sm-1">
+
                 </div>
             </div>
         </div>
