fixed sponsor alighment and link, dataset download and added policies

--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -3,19 +3,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 ">
-                    <p>  <br> <br> </p>
-                    <a href="#">
+                    <a href="https://www.ubc.ca/">
                         <img src="img/logos/ubc.jpg" class="img-responsive " alt="">
+                        <p>  <br> <br> </p>
+
                     </a>
+
                 </div>
 
-                <div class="col-md-4 >
-                    <a href="#">
+                <div class="col-md-4">
+                    <a href="https://www.ece.ubc.ca/">
                         <img src="img/logos/ECE.jpg" class="img-responsive " alt="">
                     </a>
                 </div>
                 <div class="col-md-4 ">
-                    <a href="#">
+                    <a href="https://www.avertus.ca/"">
                         <img src="img/logos/Avertus.jpg" class="img-responsive " alt="">
                     </a>
                 </div>
