--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,9 +14,9 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="\research_policies.html">Research Policy</a>
+                        <li><a href="/research_policies.html">Research Policy</a>
                         </li>
-                        <li><a href="\terms_and_conditions.html">Terms of Use</a>
+                        <li><a href="/terms_and_conditions.html">Terms of Use</a>
                         </li>
                     </ul>
                 </div>
