--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -62,7 +62,7 @@ h6 {
 }
 
 .bg-light-gray {
-    background-color: #f7f7f7;
+    background-color: rgba(226, 222, 214, 0.54);
 }
 
 .bg-darkest-gray {
