modified layout and design

--- a/_includes/Brain2Speech.html
+++ b/_includes/Brain2Speech.html
@@ -1,5 +1,5 @@
 <!-- Services Section -->
-    <section id="Brain2Speech" class="bg-light-gray">
+    <section id="Brain2Speech" class="bg-light-gray1">
         <div class="container">
             <div class="row">
                 <div class="col-sm-1">
@@ -50,7 +50,7 @@
         </div>
         <p>  <br> <br> </p>
         <div class="row text-center">
-        <a href="/algorithm.html" class="page-scroll btn btn-xl">Learn more about our algorithms</a>
+        <a href="/algorithm.html" class="btn btn-xl">Learn more about our algorithms</a>
         </div>
 
 
