--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
                         <a class="page-scroll" href="/datasets.html">Dataset</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#publications">Publications</a>
+                        <a class="page-scroll" href="https://research.hct.ece.ubc.ca/?p=551">Publications</a>
                     </li>
 
                     <li>
@@ -47,10 +47,13 @@
     <!-- Header -->
     <header>
         <div class="container">
+
+                <div class=" col-lg-5">
               <div class="intro-text">
                  <div class="intro-lead-in">Welcome To Brain2Speech</div>
                  <div class="lead">By the UBC HCT Lab</div>
                  <a href="#Brain2Speech" class="page-scroll btn btn-xl">Tell Me More</a>
+              </div>
              </div>
          </div>
      </header>
