--- a/_layouts/algorithm.html
+++ b/_layouts/algorithm.html
@@ -1,5 +1,13 @@
----
-layout: publication
----
+<!doctype html>
+<html>
+<body>
+{% include head.html %}
+{% include header_other.html %}
+<meta charset="utf-8">
 
+{% include js.html %}
 {{ content }}
+</body>
+</html>
+
+
