--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -7,20 +7,19 @@
 body {
     overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #{{ site.data.template.color.secondary-dark }};
 }
 
 .text-muted {
-    color: #{{ site.data.template.color.muted }};
+    color: #777
 }
 
 .text-primary {
-    color: #{{ site.data.template.color.primary }};
+    color: #4d70d0;
 }
-
 p {
     font-size: 16px;
     line-height: 1.75;
+    color: rgba(13, 13, 13, 0.95);
 }
 
 p.large {
@@ -36,14 +35,14 @@ a.active {
 }
 
 a {
-    color: #{{ site.data.template.color.primary }};
+    color: #091C57;
 }
 
 a:hover,
 a:focus,
 a:active,
 a.active {
-    color: #{{ site.data.template.color.secondary }};
+    color: #0c2a85;
 }
 
 h1,
@@ -53,16 +52,20 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: {{ site.data.template.font.primary }};
+    font-family: "Roboto Slab";
     font-weight: 700;
+    color: #091C57;
 }
 
 .img-centered {
     margin: 0 auto;
 }
 
-.bg-light-gray {
-    background-color: rgba(226, 222, 214, 0.54);
+.bg-light-gray1 {
+    background-color: rgba(17, 72, 232, 0.09);
+}
+.bg-light-gray2 {
+    background-color: rgba(195, 203, 234, 0.54);
 }
 
 .bg-darkest-gray {
@@ -78,21 +81,19 @@ h6 {
 }
 
 .btn-primary {
-    border-color: #{{ site.data.template.color.primary }};
+    border-color: #091C57;
     text-transform: uppercase;
-    font-family: {{ site.data.template.font.primary }};
     font-weight: 700;
     color: #fff;
-    background-color: #{{ site.data.template.color.primary }};
+    background-color: #091C57;
 }
 
 .btn-primary-2 {
     border-color: #222;
 text-transform: uppercase;
-font-family: {{ site.data.template.font.primary }};
 font-weight: 700;
 color: #fff;
-background-color: #{{ site.data.template.color.primary }};
+background-color: #091C57;
 }
 
 .btn-primary:hover,
@@ -100,9 +101,10 @@ background-color: #{{ site.data.template.color.primary }};
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    border-color: #{{ site.data.template.color.primary }};
+    border-color: #18448f;
     color: #fff;
-    background-color: #{{ site.data.template.color.secondary }};
+    background-color: #18448f;
+
 }
 
 .btn-primary:active,
@@ -126,41 +128,44 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #{{ site.data.template.color.primary }};
-    background-color: #{{ site.data.template.color.primary }};
+    border-color:#091C57;
+    background-color: #091C57;
 }
 
 .btn-primary .badge {
-    color: #{{ site.data.template.color.primary }};
+    color: #091C57;
     background-color: #fff;
 }
 
 .btn-xl {
     padding: 20px 40px;
-    border-color: #{{ site.data.template.color.primary }};
+    border-color: #091C57;
     border-radius: 3px;
+    border-width: 2px;
     text-transform: uppercase;
-    font-family: {{ site.data.template.font.primary }};
+
     font-size: 18px;
     font-weight: 700;
     color: #fff;
-    background-color: #{{ site.data.template.color.primary }};
+    background-color: #091C57;
 }
 
-.btn-xl:hover,
+.btn-xl:hover
+ {
+    border-color: #4655a9;
+    border-width: 2px;
+    color: #fff;
+    background-color:#4655a9;
+}
 .btn-xl:focus,
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-    border-color: #{{ site.data.template.color.primary }};
-    color: #fff;
-    background-color: #{{ site.data.template.color.secondary }};
-}
-
-.btn-xl:active,
-.btn-xl.active,
-.open .dropdown-toggle.btn-xl {
     background-image: none;
+    border-color: #13366f;
+    border-width: 2px;
+    color: #fff;
+    background-color: #173e8b;
 }
 
 .btn-xl.disabled,
@@ -178,32 +183,69 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-    border-color: #{{ site.data.template.color.primary }};
-    background-color: #{{ site.data.template.color.primary }};
+    border-color: #091C57;
+    background-color: #091C57;
 }
 
 .btn-xl .badge {
-    color: #{{ site.data.template.color.primary }};
+    color: #091C57;
     background-color: #fff;
 }
 
+.btn-xl-msg {
+    padding: 20px 40px;
+    border-color: #5c8ccf;
+    border-radius: 3px;
+    border-width: 2px;
+    text-transform: uppercase;
+
+    font-size: 18px;
+    font-weight: 700;
+    color: #fff;
+    background-color: #5c8ccf;
+}
+
+.btn-xl-msg:hover,
+.open .dropdown-toggle.btn-xl-msg {
+    border-color: #5373d9;
+    border-width: 2px;
+    color: #fff;
+    background-color: #5373d9;
+}
+.btn-xl-msg:focus,
+.btn-xl-msg:active,
+.btn-xl-msg.active {
+    border-color: #4c66c5;
+    border-width: 2px;
+    color: #fff;
+    background-color: #5068cb;
+}
+
+
+.btn-xl-msg:active,
+.btn-xl-msg.active,
+.open .dropdown-toggle.btn-xl-msg {
+    background-image: none;
+}
+
+
 .navbar-default {
     border-color: transparent;
-    background-color: #247c63;
+    background-color: #091C57;
 }
 
 
 
 .navbar-default .navbar-brand {
     font-family: "Arial Black", Gadget, sans-serif;
-    color: #{{ site.data.template.color.primary }};
+    color: #ffffff;
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #{{ site.data.template.color.secondary }};
+    color: #ffffff;
 }
 
 .navbar-default .navbar-collapse {
@@ -211,8 +253,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #{{ site.data.template.color.primary }};
-    background-color: #{{ site.data.template.color.primary }};
+    border-color: #6f9fd9;
+    background-color: #6f9fd9;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -221,12 +263,12 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #{{ site.data.template.color.primary }};
+    background-color: #5c8ccf;
 }
 
 .navbar-default .nav li a {
     text-transform: uppercase;
-    font-family: {{ site.data.template.font.primary }};
+    font-family: Montserrat;
     font-weight: 400;
     letter-spacing: 1px;
     color: #fff;
@@ -238,26 +280,26 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #{{ site.data.template.color.primary }};
+    color: #6f9fd9;
 }
 
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
     color: #ffffff;
-    background-color: #{{ site.data.template.color.primary }};
+    background-color: #6f9fd9;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
     color: #fff;
-    background-color: #{{ site.data.template.color.secondary }};
+    background-color: #5f88bd;
 }
 
 @media(min-width:768px) {
     .navbar-default {
         padding: 20px 0;
         border: 0;
-        background-color: #247c63;
+        background-color: #091C57;
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
@@ -276,7 +318,7 @@ fieldset[disabled] .btn-xl.active {
 
     .navbar-default.navbar-shrink {
         padding: 10px 0;
-        background-color: #247c63;
+        background-color: #091C57;
     }
 
     .navbar-default.navbar-shrink .navbar-brand {
@@ -288,18 +330,18 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url('{{ site.baseurl }}/img/header-bg.jpg');
+    background-image: url('{{ site.baseurl }}/img/brain3.jpg');
     background-position: center center;
-    background-repeat: none;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
+    background-repeat: no-repeat;
+
     background-size: cover;
-    -o-background-size: cover;
+
 }
 
 header .intro-text {
     padding-top: 100px;
     padding-bottom: 50px;
+    color:#091C57;
 }
 
 header .intro-text .intro-lead-in {
@@ -307,6 +349,7 @@ header .intro-text .intro-lead-in {
     font-family: 'Arial Black';
     font-size: 55px;
     line-height: 50px;
+    color:#091C57;
 }
 
 header .intro-text .intro-heading {
@@ -392,7 +435,7 @@ section h3.section-subheading {
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
-    background: rgba(254,209,54,.9); /* Fallback when no plugin support */
+    background: rgba(26, 63, 254, 0.9); /* Fallback when no plugin support */
     background: rgba({{ site.data.template.color.primary | hex_to_rgb | join: ',' }}, .9);
 }
 
@@ -467,188 +510,7 @@ section h3.section-subheading {
     background-color: #f1f1f1;
 }
 
-.timeline>li {
-    position: relative;
-    margin-bottom: 50px;
-    min-height: 50px;
-}
 
-.timeline>li:before,
-.timeline>li:after {
-    content: " ";
-    display: table;
-}
-
-.timeline>li:after {
-    clear: both;
-}
-
-.timeline>li .timeline-panel {
-    float: right;
-    position: relative;
-    width: 100%;
-    padding: 0 20px 0 100px;
-    text-align: left;
-}
-
-.timeline>li .timeline-panel:before {
-    right: auto;
-    left: -15px;
-    border-right-width: 15px;
-    border-left-width: 0;
-}
-
-.timeline>li .timeline-panel:after {
-    right: auto;
-    left: -14px;
-    border-right-width: 14px;
-    border-left-width: 0;
-}
-
-.timeline>li .timeline-image {
-    z-index: 100;
-    position: absolute;
-    left: 0;
-    width: 80px;
-    height: 80px;
-    margin-left: 0;
-    border: 7px solid #f1f1f1;
-    border-radius: 100%;
-    text-align: center;
-    color: #fff;
-    background-color: #{{ site.data.template.color.primary }};
-}
-
-.timeline>li .timeline-image h4 {
-    margin-top: 12px;
-    font-size: 10px;
-    line-height: 14px;
-}
-
-.timeline>li.timeline-inverted>.timeline-panel {
-    float: right;
-    padding: 0 20px 0 100px;
-    text-align: left;
-}
-
-.timeline>li.timeline-inverted>.timeline-panel:before {
-    right: auto;
-    left: -15px;
-    border-right-width: 15px;
-    border-left-width: 0;
-}
-
-.timeline>li.timeline-inverted>.timeline-panel:after {
-    right: auto;
-    left: -14px;
-    border-right-width: 14px;
-    border-left-width: 0;
-}
-
-.timeline>li:last-child {
-    margin-bottom: 0;
-}
-
-.timeline .timeline-heading h4 {
-    margin-top: 0;
-    color: inherit;
-}
-
-.timeline .timeline-heading h4.subheading {
-    text-transform: none;
-}
-
-.timeline .timeline-body>p,
-.timeline .timeline-body>ul {
-    margin-bottom: 0;
-}
-
-@media(min-width:768px) {
-    .timeline:before {
-        left: 50%;
-    }
-
-    .timeline>li {
-        margin-bottom: 100px;
-        min-height: 100px;
-    }
-
-    .timeline>li .timeline-panel {
-        float: left;
-        width: 41%;
-        padding: 0 20px 20px 30px;
-        text-align: right;
-    }
-
-    .timeline>li .timeline-image {
-        left: 50%;
-        width: 100px;
-        height: 100px;
-        margin-left: -50px;
-    }
-
-    .timeline>li .timeline-image h4 {
-        margin-top: 16px;
-        font-size: 13px;
-        line-height: 18px;
-    }
-
-    .timeline>li.timeline-inverted>.timeline-panel {
-        float: right;
-        padding: 0 30px 20px 20px;
-        text-align: left;
-    }
-}
-
-@media(min-width:992px) {
-    .timeline>li {
-        min-height: 150px;
-    }
-
-    .timeline>li .timeline-panel {
-        padding: 0 20px 20px;
-    }
-
-    .timeline>li .timeline-image {
-        width: 150px;
-        height: 150px;
-        margin-left: -75px;
-    }
-
-    .timeline>li .timeline-image h4 {
-        margin-top: 30px;
-        font-size: 18px;
-        line-height: 26px;
-    }
-
-    .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 20px 20px;
-    }
-}
-
-@media(min-width:1200px) {
-    .timeline>li {
-        min-height: 170px;
-    }
-
-    .timeline>li .timeline-panel {
-        padding: 0 20px 20px 100px;
-    }
-
-    .timeline>li .timeline-image {
-        width: 170px;
-        height: 170px;
-        margin-left: -85px;
-    }
-
-    .timeline>li .timeline-image h4 {
-        margin-top: 40px;
-    }
-
-    .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 100px 20px 20px;
-    }
-}
 
 .team-member {
     margin-bottom: 50px;
@@ -749,6 +611,7 @@ footer span.copyright {
     text-transform: none;
     font-family: {{ site.data.template.font.primary }};
     line-height: 40px;
+    color: #091C57;
 }
 
 footer ul.quicklinks {
@@ -757,6 +620,7 @@ footer ul.quicklinks {
     text-transform: none;
     font-family: {{ site.data.template.font.primary }};
     line-height: 40px;
+    color: #091C57;
 }
 
 ul.social-buttons {
@@ -781,7 +645,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: #{{ site.data.template.color.primary }};
+    background-color: #4655a9;
 }
 
 .btn:focus,
@@ -791,86 +655,16 @@ ul.social-buttons li a:active {
     outline: 0;
 }
 
-.portfolio-modal .modal-content {
-    padding: 100px 0;
-    min-height: 100%;
-    border: 0;
-    border-radius: 0;
-    text-align: center;
-    background-clip: border-box;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-.portfolio-modal .modal-content h2 {
-    margin-bottom: 15px;
-    font-size: 3em;
-}
-
-.portfolio-modal .modal-content p {
-    margin-bottom: 30px;
-}
-
-.portfolio-modal .modal-content p.item-intro {
-    margin: 20px 0 30px;
-    font-family: {{ site.data.template.font.secondary }};
-    font-size: 16px;
-    font-style: italic;
-}
-
-.portfolio-modal .modal-content ul.list-inline {
-    margin-top: 0;
-    margin-bottom: 30px;
-}
-
-.portfolio-modal .modal-content img {
-    margin-bottom: 30px;
-}
-
-.portfolio-modal .close-modal {
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    width: 75px;
-    height: 75px;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.portfolio-modal .close-modal:hover {
-    opacity: .3;
-}
-
-.portfolio-modal .close-modal .lr {
-    z-index: 1051;
-    width: 1px;
-    height: 75px;
-    margin-left: 35px;
-    background-color: #222;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.portfolio-modal .close-modal .lr .rl {
-    z-index: 1052;
-    width: 1px;
-    height: 75px;
-    background-color: #222;
-    -webkit-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
 
 ::-moz-selection {
     text-shadow: none;
     background: #{{ site.data.template.color.primary }};
-}
+
 
 ::selection {
     text-shadow: none;
     background: #{{ site.data.template.color.primary }};
-}
+
 
 img::selection {
     background: 0 0;
@@ -885,4 +679,4 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #{{ site.data.template.color.primary }};
-}
+
