--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,9 +1,9 @@
 <!-- Team Section -->
-    <section id="team" class="bg-light-gray" >
+    <section id="team" class="bg-light-gray1 >
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
+                    <h2 class="section-heading">Our Team</h2>
                 </div>
             </div>
             <div class="row">
