--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -44,6 +44,10 @@ a:active,
 a.active {
     color: #0c2a85;
 }
+.light-blue {
+    color: #353be0;
+}
+
 
 h1,
 h2,
@@ -77,7 +81,14 @@ h6 {
     margin-left: 90px;
     margin-right: 90px;
     margin-bottom: 90px;
-    margin-top: 90px;
+    margin-top: 50px;
+}
+
+.margin-center {
+
+    margin-left: 120px;
+    margin-right: 0px;
+    margin-bottom: 50px;
 }
 
 .btn-primary {
