--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
-  <footer>
+  <footer class="reg">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 white">
                     <span class="copyright">Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</span>
                 </div>
                 <div class="col-md-4">
@@ -14,9 +14,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="/research_policies.html">Research Policy</a>
-                        </li>
-                        <li><a href="/terms_and_conditions.html">Terms of Use</a>
+                        <li><a href="https://github.com/Brain2Speech/Algorithms/blob/master/LICENSE">LICENSE</a>
                         </li>
                     </ul>
                 </div>
