--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,142 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
-  background-color: #080808;
-  color: #e8e8e8;
   font-family: sans-serif;
+  background-color: #091c57;
+  overscroll-behavior-x: none;
+  scroll-behavior: smooth;
 }
 
 .Application {
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
+
+  main {
+    margin-top: 64px;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+
+    font-family: "Merriweather Sans", sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: #eeeeee;
+    line-height: 1.5;
+
+    max-width: 720px;
+
+    h1,
+    h2 {
+      font-family: "Comfortaa", cursive;
+      font-weight: 400;
+      text-align: center;
+    }
+  }
+
+  .Header {
+    width: 100%;
+    height: 64px;
+    background-color: #091c57;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    position: fixed;
+    top: 0;
+
+    font-family: "Comfortaa", cursive;
+    font-weight: 400;
+    font-size: 20px;
+    color: #eeeeee;
+    box-shadow: 10px;
+
+    span {
+      padding: 0 12px;
+    }
+  }
+
+  .Footer {
+    width: 100%;
+    height: 64px;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.Bios {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 18px 0;
+}
+
+.Bio {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 36px;
+  flex: 33%;
+  height: 250px; /* Make all bios the same height */
+
+  img {
+    width: 144px;
+    height: 144px;
+    border-radius: 72px;
+    margin-bottom: 24px;
+    background-color: #efefef;
+  }
+
+  .name {
+    font-size: 20px;
+    text-align: center;
+    white-space: nowrap;
+  }
+
+  .title {
+    font-size: 18px;
+    color: #aaaaaa;
+  }
+
+  .content {
+    color: #cccccc;
+  }
+}
+
+.ScrollButton {
+  &:hover {
+    color: #fff;
+  }
+
+  &:active {
+    color: #e8e8e8;
+  }
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  opacity: 0.5;
+}
+
+a {
+  color: #091c57;
+  text-underline-offset: 3px;
+}
+
+.center {
+  text-align: center;
 }
