--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,12 @@
+:root {
+  --ubc-color: #002145;
+  --header-color: rgba(14, 53, 98, 1); /* #18365f; */ /* #091c57; */
+  --bg-color: #0d1b44;
+  --light-bg-color: rgba(20,84,154,1); /* rgba(18, 63, 136, 1); */ /* #265495; */ /* rgba(17, 72, 232, 0.09); */
+  --text-color: #fff; /* #eeeeee; */
+  --header-text-color: #eeeeee;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -7,28 +16,30 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #091c57;
+  background-color: var(--header-color);
   overscroll-behavior-x: none;
   scroll-behavior: smooth;
 }
 
 .Application {
-  height: 100vh;
+  background-color: var(--light-bg-color);
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
+  box-shadow: 0px 0px 2px #111;
 
   main {
-    margin-top: 64px;
     padding: 24px;
+    padding-top: calc(24px + 64px);
     display: flex;
     flex-direction: column;
+    scroll-padding-top: 64px;
 
     font-family: "Merriweather Sans", sans-serif;
     font-weight: 300;
     font-size: 18px;
-    color: #eeeeee;
+    color: var(--text-color);
     line-height: 1.5;
 
     max-width: 720px;
@@ -44,22 +55,23 @@ body {
   .Header {
     width: 100%;
     height: 64px;
-    background-color: #091c57;
+    background-color: var(--header-color);
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: row;
     position: fixed;
-    top: 0;
+    z-index: 1;
 
     font-family: "Comfortaa", cursive;
     font-weight: 400;
     font-size: 20px;
-    color: #eeeeee;
-    box-shadow: 10px;
+    color: var(--header-text-color);
+    box-shadow: 0px 0px 2px #111;
 
     span {
       padding: 0 12px;
+      padding-bottom: 22px;
     }
   }
 
@@ -106,11 +118,11 @@ body {
 
   .title {
     font-size: 18px;
-    color: #aaaaaa;
+    opacity: 0.5;
   }
 
   .content {
-    color: #cccccc;
+    color: #ddd;
   }
 }
 
@@ -133,10 +145,17 @@ footer {
 }
 
 a {
-  color: #091c57;
+  color: var(--header-color);
   text-underline-offset: 3px;
 }
 
 .center {
   text-align: center;
+}
+
+.logo {
+  display: block;
+  margin: auto;
+  margin-top: 24px;
+  width: 175px;
 }
