--- a/src/index.scss
+++ b/src/index.scss
@@ -79,7 +79,7 @@ main {
   .wrapper {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
+    justify-content: flex-start;
   }
 
   .person-tile {
